editting contact link placeholder

--- a/index.html
+++ b/index.html
@@ -141,12 +141,11 @@
       <div class="container">
         <h2>Contact</h2>
         <p>
-          Want to talk about a project, collaboration, or opportunity? Reach out via email
-          or connect with me on LinkedIn.
+          If you wanna talk projects, collabs, or opportunities, you can reach me by email or connect with me on linkedin.
         </p>
         <div class="contact-links">
-          <a href="mailto:YOUR_EMAIL@example.com">Email me</a>
-          <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noopener">Connect on LinkedIn</a>
+          <a href="mailto:sean1.salvador1@gmail.com">Email me</a>
+          <a href="https://www.linkedin.com/in/sean-salvador-01826627b/" target="_blank" rel="noopener">Connect on LinkedIn</a>
         </div>
       </div>
     </section>
