--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container hero-inner">
         <div class="hero-text">
           <h1>Sean Salvador</h1>
-          <p class="tagline">Software Engineer &amp; Roblox Scripter</p>
+          <p class="tagline">Software Engineer</p>
           <p class="hero-desc">
             I build backend systems, web apps, and gameplay systems in Roblox. 
             My work spans traditional computer science projects and game experiences 
