--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             that real players interact with.
           </p>
           <div class="hero-links">
-            <a href="https://github.com/YOUR_GITHUB" target="_blank" rel="noopener">GitHub</a>
-            <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noopener">LinkedIn</a>
-            <a href="https://www.roblox.com/users/YOUR_ROBLOX_ID/profile" target="_blank" rel="noopener">Roblox</a>
+            <a href="https://github.com/seansalv" target="_blank" rel="noopener">GitHub</a>
+            <a href="https://www.linkedin.com/in/sean-salvador-01826627b/" target="_blank" rel="noopener">LinkedIn</a>
+            <a href="https://www.roblox.com/users/17342072/profile" target="_blank" rel="noopener">Roblox</a>
           </div>
         </div>
       </div>
@@ -45,11 +45,9 @@
       <div class="container">
         <h2>About</h2>
         <p>
-          I am a software engineer with experience in web development, backend systems,
-          and gameplay scripting on Roblox. I enjoy building practical tools, scalable
-          services, and game mechanics that feel smooth and responsive to players.
-          My background combines computer science fundamentals with hands-on experience
-          shipping features people actually use.
+          I’m a software engineer with experience in web development, backend systems, and Roblox gameplay scripting. 
+          I like building practical tools, scalable services, and game mechanics that feel smooth and responsive. 
+          My background combines computer science fundamentals with day-to-day development experience.
         </p>
       </div>
     </section>
@@ -73,19 +71,21 @@
         <div class="project-grid">
           <!-- SOFTWARE PROJECTS -->
           <article class="project-card" data-category="software">
-            <div class="project-tag">Software / CS</div>
-            <h3>Analytics Dashboard</h3>
-            <p>
-              A full-stack analytics dashboard built with Next.js, PostgreSQL, and a REST API.
-              Includes authentication, role-based access, and interactive charts for viewing
-              real-time metrics.
-            </p>
-            <p class="project-tech">Tech: Next.js, PostgreSQL, Chart.js, Node.js</p>
-            <div class="project-links">
-              <a href="https://github.com/YOUR_GITHUB/analytics-dashboard" target="_blank" rel="noopener">View Code</a>
-            </div>
-          </article>
-
+          <div class="project-tag">Algorithms / Python</div>
+          <h3>3D Traveling Salesman – Genetic Algorithm</h3>
+          <p>
+            A Python implementation of a genetic algorithm for solving a 3D Traveling Salesman
+            Problem. The program parses city coordinates from an input file, builds a distance
+            matrix, and evolves a population of tours using tournament selection, single-point
+            crossover, swap-based mutation, and a repair step to keep valid permutations.
+            After multiple generations, it canonicalizes the best tour, computes its path
+            length, and writes the final route and cost to an output file.
+          </p>
+          <p class="project-tech">Tech: Python, NumPy</p>
+          <div class="project-links">
+            <a href="https://github.com/seansalv/genetic-tsp-xyz" target="_blank" rel="noopener">View Code</a>
+          </div>
+        </article>
           <article class="project-card" data-category="software">
             <div class="project-tag">Software / CS</div>
             <h3>Shift Scheduling Automation</h3>
@@ -131,7 +131,6 @@
             </div>
           </article>
 
-          <!-- Add more cards and set data-category="software" or "roblox" -->
         </div>
       </div>
     </section>
