implementing roblox project demosntrations

--- a/index.html
+++ b/index.html
@@ -102,20 +102,18 @@
 
           <!-- ROBLOX PROJECTS -->
           <article class="project-card" data-category="roblox">
-            <div class="project-tag roblox-tag">Roblox</div>
-            <h3>Ledge Grabbing &amp; Climbing System</h3>
-            <p>
-              A custom ledge grabbing and climbing system built in Roblox using Lua.
-              Handles detection, animations, state management, and edge cases like windows 
-              and blockers to create fluid parkour-style movement.
-            </p>
-            <p class="project-tech">Tech: Roblox Lua, Raycasting, State Machines</p>
-            <div class="project-links">
-              <a href="https://www.roblox.com/games/YOUR_GAME_ID" target="_blank" rel="noopener">Play on Roblox</a>
-              <a href="https://github.com/YOUR_GITHUB/roblox-ledge-system" target="_blank" rel="noopener">View Scripts</a>
-            </div>
-          </article>
-
+          <div class="project-tag roblox-tag">Roblox</div>
+          <h3>Ledge Grabbing &amp; Climbing System</h3>
+          <p>
+            A custom ledge grabbing and climbing system built in Roblox using Lua.
+            Handles detection, animations, state management, and edge cases like windows 
+            and blockers to create fluid parkour-style movement.
+          </p>
+          <p class="project-tech">Tech: Roblox Lua, Raycasting, State Machines</p>
+          <div class="project-links">
+            <a href="/projects/roblox-ledge-system.html" target="_blank" rel="noopener">Watch Demo</a>
+          </div>
+        </article>
           <article class="project-card" data-category="roblox">
             <div class="project-tag roblox-tag">Roblox</div>
             <h3>Enemy Sword AI</h3>
