updating styles to dark mode

--- a/index.html
+++ b/index.html
@@ -74,12 +74,10 @@
           <div class="project-tag">Algorithms / Python</div>
           <h3>3D Traveling Salesman – Genetic Algorithm</h3>
           <p>
-            A Python implementation of a genetic algorithm for solving a 3D Traveling Salesman
-            Problem. The program parses city coordinates from an input file, builds a distance
-            matrix, and evolves a population of tours using tournament selection, single-point
-            crossover, swap-based mutation, and a repair step to keep valid permutations.
-            After multiple generations, it canonicalizes the best tour, computes its path
-            length, and writes the final route and cost to an output file.
+            A Python genetic algorithm for a 3D Traveling Salesman Problem. It parses city coordinates, builds a distance matrix, 
+            and evolves a population of tours using tournament selection, single-point crossover, swap mutation, and a repair step
+             to keep permutations valid. After several generations, it canonicalizes the best tour, computes its path length, and
+              writes the final route and cost to an output file.
           </p>
           <p class="project-tech">Tech: Python, NumPy</p>
           <div class="project-links">
