--- a/index.html
+++ b/index.html
@@ -101,17 +101,29 @@
           <!-- ROBLOX PROJECTS -->
           <article class="project-card" data-category="roblox">
           <div class="project-tag roblox-tag">Roblox</div>
-          <h3>Ledge Grabbing &amp; Climbing System</h3>
+          <h3>Ledge Vaulting & Wall-Run System</h3>
           <p>
-            A custom ledge grabbing and climbing system built in Roblox using Lua.
-            Handles detection, animations, state management, and edge cases like windows 
-            and blockers to create fluid parkour-style movement.
+            A custom movement system built in Roblox using Lua that combines ledge grabbing,
+            vaulting, and wall-running with a decay mechanic. It handles ledge detection,
+            state transitions, animation hooks, and edge cases like windows and blockers to
+            keep movement fluid and responsive.
           </p>
-          <p class="project-tech">Tech: Roblox Lua, Raycasting, State Machines</p>
+          <p class="project-tech">
+            Tech: Roblox Lua, Raycasting, State Machines, Character Movement, Timers
+          </p>
           <div class="project-links">
-            <a href="/projects/roblox-ledge-system.html" target="_blank" rel="noopener">Watch Demo</a>
+            <!-- detail page with videos + code explanation -->
+            <a href="projects/roblox-ledge-system.html" target="_blank" rel="noopener">
+              Watch demos &amp; read about the system
+            </a>
+
+            <!-- optional: GitHub repo for the scripts -->
+            <a href="https://github.com/YOUR_GITHUB/roblox-ledge-system" target="_blank" rel="noopener">
+              View code on GitHub
+            </a>
           </div>
         </article>
+
           <article class="project-card" data-category="roblox">
             <div class="project-tag roblox-tag">Roblox</div>
             <h3>Enemy Sword AI</h3>
