updating watch demos so its shorter

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="project-links">
             <!-- detail page with videos + code explanation -->
             <a href="projects/roblox-ledge-system.html" target="_blank" rel="noopener">
-              Watch demos &amp; read about the system
+              Watch demos
             </a>
 
             <!-- optional: GitHub repo for the scripts -->
