adding little go

--- a/index.html
+++ b/index.html
@@ -71,71 +71,57 @@
         <div class="project-grid">
           <!-- SOFTWARE PROJECTS -->
           <article class="project-card" data-category="software">
-          <div class="project-tag">Algorithms / Python</div>
-          <h3>3D Traveling Salesman – Genetic Algorithm</h3>
-          <p>
-            A Python genetic algorithm for a 3D Traveling Salesman Problem. It parses city coordinates, builds a distance matrix, 
-            and evolves a population of tours using tournament selection, single-point crossover, swap mutation, and a repair step
-             to keep permutations valid. After several generations, it canonicalizes the best tour, computes its path length, and
-              writes the final route and cost to an output file.
-          </p>
-          <p class="project-tech">Tech: Python, NumPy</p>
-          <div class="project-links">
-            <a href="https://github.com/seansalv/genetic-tsp-xyz" target="_blank" rel="noopener">View Code</a>
-          </div>
-        </article>
-          <article class="project-card" data-category="software">
-            <div class="project-tag">Software / CS</div>
-            <h3>Shift Scheduling Automation</h3>
+            <div class="project-tag">Algorithms / Python</div>
+            <h3>3D Traveling Salesman – Genetic Algorithm</h3>
             <p>
-              Scheduling bot that automates selecting optimal shifts for a worker under
-              time-window and priority constraints. Designed to plug into third-party
-              shift platforms via API or browser automation.
+              A Python genetic algorithm for a 3D Traveling Salesman Problem. It parses city coordinates, builds a distance matrix, 
+              and evolves a population of tours using tournament selection, single-point crossover, swap mutation, and a repair step
+              to keep permutations valid. After several generations, it canonicalizes the best tour, computes its path length, and
+                writes the final route and cost to an output file.
             </p>
-            <p class="project-tech">Tech: Python, Selenium, Optimization, REST</p>
+            <p class="project-tech">Tech: Python, NumPy</p>
             <div class="project-links">
-              <a href="https://github.com/YOUR_GITHUB/shift-scheduler" target="_blank" rel="noopener">View Code</a>
+              <a href="https://github.com/seansalv/genetic-tsp-xyz" target="_blank" rel="noopener">View Code</a>
             </div>
+          </article>
+          <article class="project-card" data-category="ai">
+              <div class="project-tag ai-tag">Game AI</div>
+              <h3>5x5 Go Alpha-Beta Engine</h3>
+              <p>
+                A 5×5 Go agent built with alpha-beta search, transposition tables, killer &amp; history
+                heuristics, aspiration windows, and quiescence search over captures and atari.
+                Exposes a simple API so you can play against it in the browser.
+              </p>
+              <p class="project-tech">Tech: Python, Alpha-Beta, FastAPI, JavaScript</p>
+              <div class="project-links">
+                <a href="go-agent.html" target="_blank" rel="noopener">Play vs Agent</a>
+                <a href="https://github.com/seansalv/little_go-agent" target="_blank" rel="noopener">Source</a>
+              </div>
           </article>
 
           <!-- ROBLOX PROJECTS -->
           <article class="project-card" data-category="roblox">
-          <div class="project-tag roblox-tag">Roblox</div>
-          <h3>Ledge Vaulting & Wall-Run System</h3>
-          <p>
-            A custom movement system built in Roblox using Lua that combines ledge grabbing,
-            vaulting, and wall-running with a decay mechanic. It handles ledge detection,
-            state transitions, animation hooks, and edge cases like windows and blockers to
-            keep movement fluid and responsive.
-          </p>
-          <p class="project-tech">
-            Tech: Roblox Lua, Raycasting, State Machines, Character Movement, Timers
-          </p>
-          <div class="project-links">
-            <!-- detail page with videos + code explanation -->
-            <a href="projects/roblox-ledge-system.html" target="_blank" rel="noopener">
-              Watch demos
-            </a>
-
-            <!-- optional: GitHub repo for the scripts -->
-            <a href="https://github.com/seansalv/roblox-wall-run-and-decay" target="_blank" rel="noopener">
-              View code on GitHub
-            </a>
-          </div>
-        </article>
-
-          <article class="project-card" data-category="roblox">
             <div class="project-tag roblox-tag">Roblox</div>
-            <h3>Enemy Sword AI</h3>
+            <h3>Ledge Vaulting & Wall-Run System</h3>
             <p>
-              NPC AI for a Roblox game that chases the player, predicts movement,
-              and uses attack windows and cooldowns for more skill-based combat
-              instead of simple “run straight at the player” behavior.
+              A custom movement system built in Roblox using Lua that combines ledge grabbing,
+              vaulting, and wall-running with a decay mechanic. It handles ledge detection,
+              state transitions, animation hooks, and edge cases like windows and blockers to
+              keep movement fluid and responsive.
             </p>
-            <p class="project-tech">Tech: Roblox Lua, PathfindingService, Finite State Machine</p>
+            <p class="project-tech">
+              Tech: Roblox Lua, Raycasting, State Machines, Character Movement, Timers
+            </p>
             <div class="project-links">
-              <a href="https://www.roblox.com/games/YOUR_GAME_ID" target="_blank" rel="noopener">Play on Roblox</a>
-              <a href="https://github.com/YOUR_GITHUB/roblox-sword-ai" target="_blank" rel="noopener">View Scripts</a>
+              <!-- detail page with videos + code explanation -->
+              <a href="projects/roblox-ledge-system.html" target="_blank" rel="noopener">
+                Watch demos
+              </a>
+
+              <!-- optional: GitHub repo for the scripts -->
+              <a href="https://github.com/seansalv/roblox-wall-run-and-decay" target="_blank" rel="noopener">
+                View code on GitHub
+              </a>
             </div>
           </article>
 
