modifying data catagories

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <a href="https://github.com/seansalv/genetic-tsp-xyz" target="_blank" rel="noopener">View Code</a>
             </div>
           </article>
-          <article class="project-card" data-category="ai">
+          <article class="project-card" data-category="software">
               <div class="project-tag ai-tag">Game AI</div>
               <h3>5x5 Go Alpha-Beta Engine</h3>
               <p>
