adding another project

--- a/index.html
+++ b/index.html
@@ -98,6 +98,25 @@
                 <a href="https://github.com/seansalv/little_go-agent" target="_blank" rel="noopener">Source</a>
               </div>
           </article>
+          <article class="project-card" data-category="software">
+            <div class="project-tag">Software / CS</div>
+            <h3>Celayix Shift Auto-Scheduler (WIP)</h3>
+            <p>
+              An async Python bot that logs into the Celayix web portal, searches for
+              self-schedulable shifts, and automatically selects matches based on
+              custom rules. Uses Playwright to control a real browser, parses
+              checkbox-based shift entries, respects minimum search intervals, and
+              supports a dry-run mode for safe testing.
+            </p>
+            <p class="project-tech">
+              Tech: Python, Playwright (async), asyncio, .env, Web Automation
+            </p>
+            <div class="project-links">
+              <a href="https://github.com/seansalv/shift-scheduler" target="_blank" rel="noopener">
+                View code
+              </a>
+            </div>
+        </article>
 
           <!-- ROBLOX PROJECTS -->
           <article class="project-card" data-category="roblox">
@@ -120,7 +139,7 @@
 
               <!-- optional: GitHub repo for the scripts -->
               <a href="https://github.com/seansalv/roblox-wall-run-and-decay" target="_blank" rel="noopener">
-                View code on GitHub
+                View code
               </a>
             </div>
           </article>
