--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </article>
           <article class="project-card" data-category="software">
             <div class="project-tag">Software / CS</div>
-            <h3>Celayix Shift Auto-Scheduler (WIP)</h3>
+            <h3>Shift Auto-Scheduler</h3>
             <p>
               An async Python bot that logs into the Celayix web portal, searches for
               self-schedulable shifts, and automatically selects matches based on
