adding new addition to portfolio

--- a/index.html
+++ b/index.html
@@ -71,6 +71,26 @@
         <div class="project-grid">
           <!-- SOFTWARE PROJECTS -->
           <article class="project-card" data-category="software">
+            <div class="project-tag">Software / Mobile</div>
+            <h3>Level-Up IRL</h3>
+            <p>
+              Anime-inspired fitness app that turns real workouts into RPG quests. Users pick a hunter
+              handle, start at E-rank, and earn XP, ranks, and streaks by logging “quests.” Built a
+              Solo Leveling-style HUD, quest modal with deterministic XP math, status screen with a
+              7-day activity strip, and local reminder toggle—all backed by Supabase auth/data.
+            </p>
+            <p class="project-tech">
+              Tech: React Native (Expo Router), TypeScript, Supabase (Auth + Postgres), React Query,
+              Expo Notifications, Day.js
+            </p>
+            <div class="project-links">
+              <a href="https://github.com/seansalv/Fitness-App" target="_blank" rel="noopener">
+                View code
+              </a>
+            </div>
+          </article>
+
+          <article class="project-card" data-category="software">
             <div class="project-tag">Algorithms / Python</div>
             <h3>3D Traveling Salesman – Genetic Algorithm</h3>
             <p>
